test/deca/syntax/invalid/multexpr_mult_incomplet.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque expr avant et après *)

{
    *;
}